added reddit API section

--- a/DQ blog APIs.ipynb
+++ b/DQ blog APIs.ipynb
@@ -11,12 +11,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import requests\n",
-    "import json"
+    "import requests.auth\n",
+    "import json\n",
+    "import getpass"
    ]
   },
   {
@@ -28,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -37,7 +39,7 @@
        "200"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -50,16 +52,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "b'{\"message\": \"success\", \"timestamp\": 1542880019, \"iss_position\": {\"latitude\": \"1.2881\", \"longitude\": \"103.1973\"}}'"
+       "b'{\"message\": \"success\", \"timestamp\": 1542882464, \"iss_position\": {\"latitude\": \"15.2589\", \"longitude\": \"-100.6600\"}}'"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -315,6 +317,373 @@
    "metadata": {},
    "source": [
     "Further exploration is limited by my lack of knowledge of oauth and modhashes, this is a problem for another day"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### More Reddit starting with OAuth2\n",
+    "\n",
+    "I immediatly discovered that Reddit won't let you do much without authentication."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Request a token"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "input client secret from https://www.reddit.com/prefs/apps········\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Client API data. Apps client ID and apps client secret\n",
+    "# Because i can't be trusted the secret will need to be input each time.\n",
+    "client_secret = getpass.getpass(\"input client secret from https://www.reddit.com/prefs/apps\")\n",
+    "client_auth = requests.auth.HTTPBasicAuth('LJqjGWbNCzUpKg', client_secret)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Password········\n"
+     ]
+    }
+   ],
+   "source": [
+    "headers = {\"User-Agent\": \"ClientMcClientface by /u/timbo72\"}\n",
+    "password = getpass.getpass(\"Password\")\n",
+    "post_data = {\"grant_type\": \"password\", \"username\": \"timbo72\", \"password\": password}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'access_token': '16182986-sVDvEG9AhqSyjNrdS2N_3B0bt-I',\n",
+       " 'token_type': 'bearer',\n",
+       " 'expires_in': 3600,\n",
+       " 'scope': '*'}"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "response = requests.post(\"https://www.reddit.com/api/v1/access_token\", auth=client_auth, data=post_data, headers=headers)\n",
+    "response.json()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'message': 'Internal Server Error', 'error': 500}"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "headers = {\"Authorization\": \"bearer 16182986-sVDvEG9AhqSyjNrdS2N_3B0bt-I\", \"User-Agent\": \"ClientMcClientface by /u/timbo72\"}\n",
+    "response = requests.get(\"https://oauth.reddit.com/api/v1/me\", headers=headers)\n",
+    "response.json()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'kind': 'Listing',\n",
+       "  'data': {'modhash': '',\n",
+       "   'dist': 1,\n",
+       "   'children': [{'kind': 't3',\n",
+       "     'data': {'approved_at_utc': None,\n",
+       "      'subreddit': 'PrequelMemes',\n",
+       "      'selftext': '',\n",
+       "      'user_reports': [],\n",
+       "      'saved': False,\n",
+       "      'mod_reason_title': None,\n",
+       "      'gilded': 0,\n",
+       "      'clicked': False,\n",
+       "      'title': \"I'm Not Actually Encouraging or Trying to Incite a Civil War By The Way. This Image is Just Meant to Be Funny\",\n",
+       "      'link_flair_richtext': [],\n",
+       "      'subreddit_name_prefixed': 'r/PrequelMemes',\n",
+       "      'hidden': False,\n",
+       "      'pwls': 6,\n",
+       "      'link_flair_css_class': None,\n",
+       "      'downs': 0,\n",
+       "      'thumbnail_height': 83,\n",
+       "      'parent_whitelist_status': 'all_ads',\n",
+       "      'hide_score': True,\n",
+       "      'name': 't3_9zx4la',\n",
+       "      'quarantine': False,\n",
+       "      'link_flair_text_color': 'dark',\n",
+       "      'upvote_ratio': 1.0,\n",
+       "      'author_flair_background_color': None,\n",
+       "      'subreddit_type': 'public',\n",
+       "      'ups': 14,\n",
+       "      'domain': 'i.redd.it',\n",
+       "      'media_embed': {},\n",
+       "      'thumbnail_width': 140,\n",
+       "      'author_flair_template_id': None,\n",
+       "      'is_original_content': False,\n",
+       "      'author_fullname': 't2_woko6',\n",
+       "      'secure_media': None,\n",
+       "      'is_reddit_media_domain': True,\n",
+       "      'is_meta': False,\n",
+       "      'category': None,\n",
+       "      'secure_media_embed': {},\n",
+       "      'link_flair_text': None,\n",
+       "      'can_mod_post': False,\n",
+       "      'score': 14,\n",
+       "      'approved_by': None,\n",
+       "      'thumbnail': 'https://a.thumbs.redditmedia.com/2rx63ZsAfplipov-NEkUOPJMfzkuXwEAr9tIOnDthB4.jpg',\n",
+       "      'edited': False,\n",
+       "      'author_flair_css_class': None,\n",
+       "      'author_flair_richtext': [],\n",
+       "      'gildings': {'gid_1': 0, 'gid_2': 0, 'gid_3': 0},\n",
+       "      'post_hint': 'image',\n",
+       "      'content_categories': None,\n",
+       "      'is_self': False,\n",
+       "      'mod_note': None,\n",
+       "      'created': 1543079715.0,\n",
+       "      'link_flair_type': 'text',\n",
+       "      'wls': 6,\n",
+       "      'banned_by': None,\n",
+       "      'author_flair_type': 'text',\n",
+       "      'contest_mode': False,\n",
+       "      'selftext_html': None,\n",
+       "      'likes': None,\n",
+       "      'suggested_sort': None,\n",
+       "      'banned_at_utc': None,\n",
+       "      'view_count': None,\n",
+       "      'archived': False,\n",
+       "      'no_follow': False,\n",
+       "      'is_crosspostable': False,\n",
+       "      'pinned': False,\n",
+       "      'over_18': False,\n",
+       "      'preview': {'images': [{'source': {'url': 'https://preview.redd.it/mu82vk6uw8021.png?auto=webp&amp;s=156ce77f4f6044ed1b836f16a091c11d41646351',\n",
+       "          'width': 900,\n",
+       "          'height': 534},\n",
+       "         'resolutions': [{'url': 'https://preview.redd.it/mu82vk6uw8021.png?width=108&amp;crop=smart&amp;auto=webp&amp;s=c284564b1859f56a61b1e95fd97881956e4a5dfd',\n",
+       "           'width': 108,\n",
+       "           'height': 64},\n",
+       "          {'url': 'https://preview.redd.it/mu82vk6uw8021.png?width=216&amp;crop=smart&amp;auto=webp&amp;s=03f98ef9b2e9898afdf8bd7f456cd122d466fb02',\n",
+       "           'width': 216,\n",
+       "           'height': 128},\n",
+       "          {'url': 'https://preview.redd.it/mu82vk6uw8021.png?width=320&amp;crop=smart&amp;auto=webp&amp;s=fc844cc134a9b804f127df6a6716f1a8e69f6921',\n",
+       "           'width': 320,\n",
+       "           'height': 189},\n",
+       "          {'url': 'https://preview.redd.it/mu82vk6uw8021.png?width=640&amp;crop=smart&amp;auto=webp&amp;s=e5fab1143968059d7c5e02139dd2874532a61820',\n",
+       "           'width': 640,\n",
+       "           'height': 379}],\n",
+       "         'variants': {},\n",
+       "         'id': 'Hq3cA4WbEwjjIqJgak6-pR263E-376BqMxBSpWyDEJw'}],\n",
+       "       'enabled': True},\n",
+       "      'media': None,\n",
+       "      'media_only': False,\n",
+       "      'link_flair_template_id': None,\n",
+       "      'can_gild': False,\n",
+       "      'spoiler': False,\n",
+       "      'locked': False,\n",
+       "      'author_flair_text': None,\n",
+       "      'visited': False,\n",
+       "      'num_reports': None,\n",
+       "      'distinguished': None,\n",
+       "      'subreddit_id': 't5_3i60n',\n",
+       "      'mod_reason_by': None,\n",
+       "      'removal_reason': None,\n",
+       "      'link_flair_background_color': '',\n",
+       "      'id': '9zx4la',\n",
+       "      'is_robot_indexable': True,\n",
+       "      'report_reasons': None,\n",
+       "      'author': 'natemamate',\n",
+       "      'num_crossposts': 0,\n",
+       "      'num_comments': 2,\n",
+       "      'send_replies': True,\n",
+       "      'author_patreon_flair': False,\n",
+       "      'author_flair_text_color': None,\n",
+       "      'permalink': '/r/PrequelMemes/comments/9zx4la/im_not_actually_encouraging_or_trying_to_incite_a/',\n",
+       "      'whitelist_status': 'all_ads',\n",
+       "      'stickied': False,\n",
+       "      'url': 'https://i.redd.it/mu82vk6uw8021.png',\n",
+       "      'subreddit_subscribers': 782854,\n",
+       "      'created_utc': 1543050915.0,\n",
+       "      'mod_reports': [],\n",
+       "      'is_video': False}}],\n",
+       "   'after': None,\n",
+       "   'before': None}},\n",
+       " {'kind': 'Listing',\n",
+       "  'data': {'modhash': '',\n",
+       "   'dist': None,\n",
+       "   'children': [{'kind': 't1',\n",
+       "     'data': {'subreddit_id': 't5_3i60n',\n",
+       "      'approved_at_utc': None,\n",
+       "      'ups': 1,\n",
+       "      'mod_reason_by': None,\n",
+       "      'banned_by': None,\n",
+       "      'author_flair_type': 'text',\n",
+       "      'removal_reason': None,\n",
+       "      'link_id': 't3_9zx4la',\n",
+       "      'author_flair_template_id': None,\n",
+       "      'likes': None,\n",
+       "      'no_follow': True,\n",
+       "      'replies': {'kind': 'Listing',\n",
+       "       'data': {'modhash': '',\n",
+       "        'dist': None,\n",
+       "        'children': [{'kind': 't1',\n",
+       "          'data': {'subreddit_id': 't5_3i60n',\n",
+       "           'approved_at_utc': None,\n",
+       "           'ups': 1,\n",
+       "           'mod_reason_by': None,\n",
+       "           'banned_by': None,\n",
+       "           'author_flair_type': 'text',\n",
+       "           'removal_reason': None,\n",
+       "           'link_id': 't3_9zx4la',\n",
+       "           'author_flair_template_id': None,\n",
+       "           'likes': None,\n",
+       "           'no_follow': True,\n",
+       "           'replies': '',\n",
+       "           'user_reports': [],\n",
+       "           'saved': False,\n",
+       "           'id': 'eacnr06',\n",
+       "           'banned_at_utc': None,\n",
+       "           'mod_reason_title': None,\n",
+       "           'gilded': 0,\n",
+       "           'archived': False,\n",
+       "           'report_reasons': None,\n",
+       "           'author': 'batgris',\n",
+       "           'can_mod_post': False,\n",
+       "           'send_replies': True,\n",
+       "           'parent_id': 't1_eacnn27',\n",
+       "           'score': 1,\n",
+       "           'author_fullname': 't2_6lqjtl0',\n",
+       "           'approved_by': None,\n",
+       "           'downs': 0,\n",
+       "           'body': 'Weather we should throw out all the normies',\n",
+       "           'edited': False,\n",
+       "           'author_flair_css_class': None,\n",
+       "           'is_submitter': False,\n",
+       "           'collapsed': False,\n",
+       "           'author_flair_richtext': [],\n",
+       "           'author_patreon_flair': False,\n",
+       "           'collapsed_reason': None,\n",
+       "           'body_html': '&lt;div class=\"md\"&gt;&lt;p&gt;Weather we should throw out all the normies&lt;/p&gt;\\n&lt;/div&gt;',\n",
+       "           'stickied': False,\n",
+       "           'subreddit_type': 'public',\n",
+       "           'can_gild': True,\n",
+       "           'gildings': {'gid_1': 0, 'gid_2': 0, 'gid_3': 0},\n",
+       "           'author_flair_text_color': None,\n",
+       "           'score_hidden': True,\n",
+       "           'permalink': '/r/PrequelMemes/comments/9zx4la/im_not_actually_encouraging_or_trying_to_incite_a/eacnr06/',\n",
+       "           'num_reports': None,\n",
+       "           'name': 't1_eacnr06',\n",
+       "           'created': 1543080871.0,\n",
+       "           'subreddit': 'PrequelMemes',\n",
+       "           'author_flair_text': None,\n",
+       "           'created_utc': 1543052071.0,\n",
+       "           'subreddit_name_prefixed': 'r/PrequelMemes',\n",
+       "           'controversiality': 0,\n",
+       "           'depth': 1,\n",
+       "           'author_flair_background_color': None,\n",
+       "           'mod_reports': [],\n",
+       "           'mod_note': None,\n",
+       "           'distinguished': None}}],\n",
+       "        'after': None,\n",
+       "        'before': None}},\n",
+       "      'user_reports': [],\n",
+       "      'saved': False,\n",
+       "      'id': 'eacnn27',\n",
+       "      'banned_at_utc': None,\n",
+       "      'mod_reason_title': None,\n",
+       "      'gilded': 0,\n",
+       "      'archived': False,\n",
+       "      'report_reasons': None,\n",
+       "      'author': 'lovemichaelsean',\n",
+       "      'can_mod_post': False,\n",
+       "      'send_replies': True,\n",
+       "      'parent_id': 't3_9zx4la',\n",
+       "      'score': 1,\n",
+       "      'author_fullname': 't2_17ypd2y1',\n",
+       "      'approved_by': None,\n",
+       "      'downs': 0,\n",
+       "      'body': 'What would the civil war be about?\\n\\nPossibly whether people actually find Jar-Jar funny',\n",
+       "      'edited': False,\n",
+       "      'author_flair_css_class': None,\n",
+       "      'is_submitter': False,\n",
+       "      'collapsed': False,\n",
+       "      'author_flair_richtext': [],\n",
+       "      'author_patreon_flair': False,\n",
+       "      'collapsed_reason': None,\n",
+       "      'body_html': '&lt;div class=\"md\"&gt;&lt;p&gt;What would the civil war be about?&lt;/p&gt;\\n\\n&lt;p&gt;Possibly whether people actually find Jar-Jar funny&lt;/p&gt;\\n&lt;/div&gt;',\n",
+       "      'stickied': False,\n",
+       "      'subreddit_type': 'public',\n",
+       "      'can_gild': True,\n",
+       "      'gildings': {'gid_1': 0, 'gid_2': 0, 'gid_3': 0},\n",
+       "      'author_flair_text_color': None,\n",
+       "      'score_hidden': True,\n",
+       "      'permalink': '/r/PrequelMemes/comments/9zx4la/im_not_actually_encouraging_or_trying_to_incite_a/eacnn27/',\n",
+       "      'num_reports': None,\n",
+       "      'name': 't1_eacnn27',\n",
+       "      'created': 1543080658.0,\n",
+       "      'subreddit': 'PrequelMemes',\n",
+       "      'author_flair_text': None,\n",
+       "      'created_utc': 1543051858.0,\n",
+       "      'subreddit_name_prefixed': 'r/PrequelMemes',\n",
+       "      'controversiality': 0,\n",
+       "      'depth': 0,\n",
+       "      'author_flair_background_color': None,\n",
+       "      'mod_reports': [],\n",
+       "      'mod_note': None,\n",
+       "      'distinguished': None}}],\n",
+       "   'after': None,\n",
+       "   'before': None}}]"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "headers = {\"Authorization\": \"bearer 16182986-sVDvEG9AhqSyjNrdS2N_3B0bt-I\", \"User-Agent\": \"ClientMcClientface by /u/timbo72\"}\n",
+    "response = requests.get(\"https://oauth.reddit.com/r/PrequelMemes/random\", headers=headers)\n",
+    "response.json()"
    ]
   }
  ],
