--- a/DQ blog APIs.ipynb
+++ b/DQ blog APIs.ipynb
@@ -418,6 +418,7 @@
     "headers = {\"Authorization\": \"bearer 16182986-sVDvEG9AhqSyjNrdS2N_3B0bt-I\", \"User-Agent\": \"ClientMcClientface by /u/timbo72\"}\n",
     "response = requests.get(\"https://oauth.reddit.com/api/v1/me\", headers=headers)\n",
     "response.json()"
+    "print("Hello from the DataQuest Github mission!")"
    ]
   },
   {
