some more work on the HIBP API

--- a/DQ blog APIs.ipynb
+++ b/DQ blog APIs.ipynb
@@ -58,7 +58,7 @@
     {
      "data": {
       "text/plain": [
-       "b'{\"message\": \"success\", \"timestamp\": 1542882464, \"iss_position\": {\"latitude\": \"15.2589\", \"longitude\": \"-100.6600\"}}'"
+       "b'{\"iss_position\": {\"latitude\": \"23.8181\", \"longitude\": \"164.9326\"}, \"timestamp\": 1552591894, \"message\": \"success\"}'"
       ]
      },
      "execution_count": 3,
@@ -68,6 +68,28 @@
    ],
    "source": [
     "response.content"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'iss_position': {'latitude': '23.8181', 'longitude': '164.9326'},\n",
+       " 'timestamp': 1552591894,\n",
+       " 'message': 'success'}"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "response.json()"
    ]
   },
   {
@@ -684,6 +706,171 @@
     "headers = {\"Authorization\": \"bearer 16182986-sVDvEG9AhqSyjNrdS2N_3B0bt-I\", \"User-Agent\": \"ClientMcClientface by /u/timbo72\"}\n",
     "response = requests.get(\"https://oauth.reddit.com/r/PrequelMemes/random\", headers=headers)\n",
     "response.json()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Now for something completely different"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "I've been looking at the 'have i been pwned' API which is now at version 2.\n",
+    "First off there is a great script for version one written by Dr Mike Pound, lets give it a go.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('7CB9DED83CD7F2704D6435C743ED3124ED56C701', 766)"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import hashlib\n",
+    "import sys\n",
+    "\n",
+    "try:\n",
+    "    import requests\n",
+    "except ModuleNotFoundError:\n",
+    "    print(\"### requests library not found ###\")\n",
+    "    raise\n",
+    "\n",
+    "    \n",
+    "def lookup_pwned_api(pwd):\n",
+    "    \"\"\"\n",
+    "    Returns hash and number of times password was seen in pwned database.\n",
+    "    \n",
+    "    Args: pwd: password to check\n",
+    "    \n",
+    "    Returns: A (sha1, count) tuple of the SHA-1 hashed password and the number of times it was found in the database.\n",
+    "    \n",
+    "    Raises: RuntimeError: if there was an error trying to fetch the data from the API.\n",
+    "            UnicodeError: if there was and error UTF_encoding the password.\n",
+    "    \"\"\"\n",
+    "    sha1pwd = hashlib.sha1(pwd.encode('utf-8')).hexdigest().upper()\n",
+    "    head, tail = sha1pwd[:5], sha1pwd[5:]\n",
+    "    url = \"https://api.pwnedpasswords.com/range/\" + head\n",
+    "    res = requests.get(url)\n",
+    "    if res.status_code != 200:\n",
+    "        raise RuntimeError(\"Error fetching '{}': {}\".format(url, res.status_code))\n",
+    "    hashes = (line.split(\":\") for line in res.text.splitlines())\n",
+    "    count = next((int(count) for t, count in hashes if t == tail), 0)\n",
+    "    return sha1pwd, count\n",
+    "\n",
+    "\n",
+    "def main(args):\n",
+    "    ec = 0\n",
+    "    for pwd in args or sys.stdin:\n",
+    "        pwd = pwd.strip()\n",
+    "        try:\n",
+    "            sha1pwd, count = lookup_pwned_api(pwd)\n",
+    "            \n",
+    "            if count:\n",
+    "                foundmsg = \"{0} was found with {1} occurances (hash: {2})\"\n",
+    "                print(foundmsg.format(pwd, count, sha1pwd))\n",
+    "                ec = 1\n",
+    "            else:\n",
+    "                print(\"{} was not found\".format(pwd))\n",
+    "        except UnicodeError:\n",
+    "            errormsg = sys.exc_info()[1]\n",
+    "            print(\"{0} could not be checked: {1}\". format(pwd, errormsg))\n",
+    "            ec = 1\n",
+    "            continue\n",
+    "    return ec\n",
+    "\n",
+    "lookup_pwned_api(\"battletech\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('ACA7AF6B2BE0A44F03E37C4620761B5D0B3F270F', 5)"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lookup_pwned_api(\"delta1472\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Lets try with V2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import requests\n",
+    "\n",
+    "pwd = \"lynettecolleen@yahoo.com.au\"\n",
+    "headers = {\"api-version\":\"2\", \"user-agent\":\"Timbos-api-notebook\"}    \n",
+    "url = \"https://haveibeenpwned.com/api/breachedaccount/\" + pwd + \"?truncateResponse=true\"\n",
+    "res = requests.get(url, headers = headers)\n",
+    "data = res.json()\n",
+    "len(data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Houzz', 'MyFitnessPal', 'OnlinerSpambot']"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sites = []\n",
+    "for i in data:\n",
+    "    sites.append(i[\"Name\"])\n",
+    "    \n",
+    "sites"
    ]
   }
  ],
