--- a/DQ blog APIs.ipynb
+++ b/DQ blog APIs.ipynb
@@ -379,14 +379,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Password········\n"
+     "ename": "NameError",
+     "evalue": "name 'getpass' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-25-ca274c01530c>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mheaders\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m{\u001b[0m\u001b[0;34m\"User-Agent\"\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0;34m\"ClientMcClientface by /u/timbo72\"\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mpassword\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mgetpass\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mgetpass\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0mpost_data\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m{\u001b[0m\u001b[0;34m\"grant_type\"\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0;34m\"password\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"username\"\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0;34m\"timbo72\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"password\"\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mpassword\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'getpass' is not defined"
      ]
     }
    ],
@@ -444,268 +448,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[{'kind': 'Listing',\n",
-       "  'data': {'modhash': '',\n",
-       "   'dist': 1,\n",
-       "   'children': [{'kind': 't3',\n",
-       "     'data': {'approved_at_utc': None,\n",
-       "      'subreddit': 'PrequelMemes',\n",
-       "      'selftext': '',\n",
-       "      'user_reports': [],\n",
-       "      'saved': False,\n",
-       "      'mod_reason_title': None,\n",
-       "      'gilded': 0,\n",
-       "      'clicked': False,\n",
-       "      'title': \"I'm Not Actually Encouraging or Trying to Incite a Civil War By The Way. This Image is Just Meant to Be Funny\",\n",
-       "      'link_flair_richtext': [],\n",
-       "      'subreddit_name_prefixed': 'r/PrequelMemes',\n",
-       "      'hidden': False,\n",
-       "      'pwls': 6,\n",
-       "      'link_flair_css_class': None,\n",
-       "      'downs': 0,\n",
-       "      'thumbnail_height': 83,\n",
-       "      'parent_whitelist_status': 'all_ads',\n",
-       "      'hide_score': True,\n",
-       "      'name': 't3_9zx4la',\n",
-       "      'quarantine': False,\n",
-       "      'link_flair_text_color': 'dark',\n",
-       "      'upvote_ratio': 1.0,\n",
-       "      'author_flair_background_color': None,\n",
-       "      'subreddit_type': 'public',\n",
-       "      'ups': 14,\n",
-       "      'domain': 'i.redd.it',\n",
-       "      'media_embed': {},\n",
-       "      'thumbnail_width': 140,\n",
-       "      'author_flair_template_id': None,\n",
-       "      'is_original_content': False,\n",
-       "      'author_fullname': 't2_woko6',\n",
-       "      'secure_media': None,\n",
-       "      'is_reddit_media_domain': True,\n",
-       "      'is_meta': False,\n",
-       "      'category': None,\n",
-       "      'secure_media_embed': {},\n",
-       "      'link_flair_text': None,\n",
-       "      'can_mod_post': False,\n",
-       "      'score': 14,\n",
-       "      'approved_by': None,\n",
-       "      'thumbnail': 'https://a.thumbs.redditmedia.com/2rx63ZsAfplipov-NEkUOPJMfzkuXwEAr9tIOnDthB4.jpg',\n",
-       "      'edited': False,\n",
-       "      'author_flair_css_class': None,\n",
-       "      'author_flair_richtext': [],\n",
-       "      'gildings': {'gid_1': 0, 'gid_2': 0, 'gid_3': 0},\n",
-       "      'post_hint': 'image',\n",
-       "      'content_categories': None,\n",
-       "      'is_self': False,\n",
-       "      'mod_note': None,\n",
-       "      'created': 1543079715.0,\n",
-       "      'link_flair_type': 'text',\n",
-       "      'wls': 6,\n",
-       "      'banned_by': None,\n",
-       "      'author_flair_type': 'text',\n",
-       "      'contest_mode': False,\n",
-       "      'selftext_html': None,\n",
-       "      'likes': None,\n",
-       "      'suggested_sort': None,\n",
-       "      'banned_at_utc': None,\n",
-       "      'view_count': None,\n",
-       "      'archived': False,\n",
-       "      'no_follow': False,\n",
-       "      'is_crosspostable': False,\n",
-       "      'pinned': False,\n",
-       "      'over_18': False,\n",
-       "      'preview': {'images': [{'source': {'url': 'https://preview.redd.it/mu82vk6uw8021.png?auto=webp&amp;s=156ce77f4f6044ed1b836f16a091c11d41646351',\n",
-       "          'width': 900,\n",
-       "          'height': 534},\n",
-       "         'resolutions': [{'url': 'https://preview.redd.it/mu82vk6uw8021.png?width=108&amp;crop=smart&amp;auto=webp&amp;s=c284564b1859f56a61b1e95fd97881956e4a5dfd',\n",
-       "           'width': 108,\n",
-       "           'height': 64},\n",
-       "          {'url': 'https://preview.redd.it/mu82vk6uw8021.png?width=216&amp;crop=smart&amp;auto=webp&amp;s=03f98ef9b2e9898afdf8bd7f456cd122d466fb02',\n",
-       "           'width': 216,\n",
-       "           'height': 128},\n",
-       "          {'url': 'https://preview.redd.it/mu82vk6uw8021.png?width=320&amp;crop=smart&amp;auto=webp&amp;s=fc844cc134a9b804f127df6a6716f1a8e69f6921',\n",
-       "           'width': 320,\n",
-       "           'height': 189},\n",
-       "          {'url': 'https://preview.redd.it/mu82vk6uw8021.png?width=640&amp;crop=smart&amp;auto=webp&amp;s=e5fab1143968059d7c5e02139dd2874532a61820',\n",
-       "           'width': 640,\n",
-       "           'height': 379}],\n",
-       "         'variants': {},\n",
-       "         'id': 'Hq3cA4WbEwjjIqJgak6-pR263E-376BqMxBSpWyDEJw'}],\n",
-       "       'enabled': True},\n",
-       "      'media': None,\n",
-       "      'media_only': False,\n",
-       "      'link_flair_template_id': None,\n",
-       "      'can_gild': False,\n",
-       "      'spoiler': False,\n",
-       "      'locked': False,\n",
-       "      'author_flair_text': None,\n",
-       "      'visited': False,\n",
-       "      'num_reports': None,\n",
-       "      'distinguished': None,\n",
-       "      'subreddit_id': 't5_3i60n',\n",
-       "      'mod_reason_by': None,\n",
-       "      'removal_reason': None,\n",
-       "      'link_flair_background_color': '',\n",
-       "      'id': '9zx4la',\n",
-       "      'is_robot_indexable': True,\n",
-       "      'report_reasons': None,\n",
-       "      'author': 'natemamate',\n",
-       "      'num_crossposts': 0,\n",
-       "      'num_comments': 2,\n",
-       "      'send_replies': True,\n",
-       "      'author_patreon_flair': False,\n",
-       "      'author_flair_text_color': None,\n",
-       "      'permalink': '/r/PrequelMemes/comments/9zx4la/im_not_actually_encouraging_or_trying_to_incite_a/',\n",
-       "      'whitelist_status': 'all_ads',\n",
-       "      'stickied': False,\n",
-       "      'url': 'https://i.redd.it/mu82vk6uw8021.png',\n",
-       "      'subreddit_subscribers': 782854,\n",
-       "      'created_utc': 1543050915.0,\n",
-       "      'mod_reports': [],\n",
-       "      'is_video': False}}],\n",
-       "   'after': None,\n",
-       "   'before': None}},\n",
-       " {'kind': 'Listing',\n",
-       "  'data': {'modhash': '',\n",
-       "   'dist': None,\n",
-       "   'children': [{'kind': 't1',\n",
-       "     'data': {'subreddit_id': 't5_3i60n',\n",
-       "      'approved_at_utc': None,\n",
-       "      'ups': 1,\n",
-       "      'mod_reason_by': None,\n",
-       "      'banned_by': None,\n",
-       "      'author_flair_type': 'text',\n",
-       "      'removal_reason': None,\n",
-       "      'link_id': 't3_9zx4la',\n",
-       "      'author_flair_template_id': None,\n",
-       "      'likes': None,\n",
-       "      'no_follow': True,\n",
-       "      'replies': {'kind': 'Listing',\n",
-       "       'data': {'modhash': '',\n",
-       "        'dist': None,\n",
-       "        'children': [{'kind': 't1',\n",
-       "          'data': {'subreddit_id': 't5_3i60n',\n",
-       "           'approved_at_utc': None,\n",
-       "           'ups': 1,\n",
-       "           'mod_reason_by': None,\n",
-       "           'banned_by': None,\n",
-       "           'author_flair_type': 'text',\n",
-       "           'removal_reason': None,\n",
-       "           'link_id': 't3_9zx4la',\n",
-       "           'author_flair_template_id': None,\n",
-       "           'likes': None,\n",
-       "           'no_follow': True,\n",
-       "           'replies': '',\n",
-       "           'user_reports': [],\n",
-       "           'saved': False,\n",
-       "           'id': 'eacnr06',\n",
-       "           'banned_at_utc': None,\n",
-       "           'mod_reason_title': None,\n",
-       "           'gilded': 0,\n",
-       "           'archived': False,\n",
-       "           'report_reasons': None,\n",
-       "           'author': 'batgris',\n",
-       "           'can_mod_post': False,\n",
-       "           'send_replies': True,\n",
-       "           'parent_id': 't1_eacnn27',\n",
-       "           'score': 1,\n",
-       "           'author_fullname': 't2_6lqjtl0',\n",
-       "           'approved_by': None,\n",
-       "           'downs': 0,\n",
-       "           'body': 'Weather we should throw out all the normies',\n",
-       "           'edited': False,\n",
-       "           'author_flair_css_class': None,\n",
-       "           'is_submitter': False,\n",
-       "           'collapsed': False,\n",
-       "           'author_flair_richtext': [],\n",
-       "           'author_patreon_flair': False,\n",
-       "           'collapsed_reason': None,\n",
-       "           'body_html': '&lt;div class=\"md\"&gt;&lt;p&gt;Weather we should throw out all the normies&lt;/p&gt;\\n&lt;/div&gt;',\n",
-       "           'stickied': False,\n",
-       "           'subreddit_type': 'public',\n",
-       "           'can_gild': True,\n",
-       "           'gildings': {'gid_1': 0, 'gid_2': 0, 'gid_3': 0},\n",
-       "           'author_flair_text_color': None,\n",
-       "           'score_hidden': True,\n",
-       "           'permalink': '/r/PrequelMemes/comments/9zx4la/im_not_actually_encouraging_or_trying_to_incite_a/eacnr06/',\n",
-       "           'num_reports': None,\n",
-       "           'name': 't1_eacnr06',\n",
-       "           'created': 1543080871.0,\n",
-       "           'subreddit': 'PrequelMemes',\n",
-       "           'author_flair_text': None,\n",
-       "           'created_utc': 1543052071.0,\n",
-       "           'subreddit_name_prefixed': 'r/PrequelMemes',\n",
-       "           'controversiality': 0,\n",
-       "           'depth': 1,\n",
-       "           'author_flair_background_color': None,\n",
-       "           'mod_reports': [],\n",
-       "           'mod_note': None,\n",
-       "           'distinguished': None}}],\n",
-       "        'after': None,\n",
-       "        'before': None}},\n",
-       "      'user_reports': [],\n",
-       "      'saved': False,\n",
-       "      'id': 'eacnn27',\n",
-       "      'banned_at_utc': None,\n",
-       "      'mod_reason_title': None,\n",
-       "      'gilded': 0,\n",
-       "      'archived': False,\n",
-       "      'report_reasons': None,\n",
-       "      'author': 'lovemichaelsean',\n",
-       "      'can_mod_post': False,\n",
-       "      'send_replies': True,\n",
-       "      'parent_id': 't3_9zx4la',\n",
-       "      'score': 1,\n",
-       "      'author_fullname': 't2_17ypd2y1',\n",
-       "      'approved_by': None,\n",
-       "      'downs': 0,\n",
-       "      'body': 'What would the civil war be about?\\n\\nPossibly whether people actually find Jar-Jar funny',\n",
-       "      'edited': False,\n",
-       "      'author_flair_css_class': None,\n",
-       "      'is_submitter': False,\n",
-       "      'collapsed': False,\n",
-       "      'author_flair_richtext': [],\n",
-       "      'author_patreon_flair': False,\n",
-       "      'collapsed_reason': None,\n",
-       "      'body_html': '&lt;div class=\"md\"&gt;&lt;p&gt;What would the civil war be about?&lt;/p&gt;\\n\\n&lt;p&gt;Possibly whether people actually find Jar-Jar funny&lt;/p&gt;\\n&lt;/div&gt;',\n",
-       "      'stickied': False,\n",
-       "      'subreddit_type': 'public',\n",
-       "      'can_gild': True,\n",
-       "      'gildings': {'gid_1': 0, 'gid_2': 0, 'gid_3': 0},\n",
-       "      'author_flair_text_color': None,\n",
-       "      'score_hidden': True,\n",
-       "      'permalink': '/r/PrequelMemes/comments/9zx4la/im_not_actually_encouraging_or_trying_to_incite_a/eacnn27/',\n",
-       "      'num_reports': None,\n",
-       "      'name': 't1_eacnn27',\n",
-       "      'created': 1543080658.0,\n",
-       "      'subreddit': 'PrequelMemes',\n",
-       "      'author_flair_text': None,\n",
-       "      'created_utc': 1543051858.0,\n",
-       "      'subreddit_name_prefixed': 'r/PrequelMemes',\n",
-       "      'controversiality': 0,\n",
-       "      'depth': 0,\n",
-       "      'author_flair_background_color': None,\n",
-       "      'mod_reports': [],\n",
-       "      'mod_note': None,\n",
-       "      'distinguished': None}}],\n",
-       "   'after': None,\n",
-       "   'before': None}}]"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "headers = {\"Authorization\": \"bearer 16182986-sVDvEG9AhqSyjNrdS2N_3B0bt-I\", \"User-Agent\": \"ClientMcClientface by /u/timbo72\"}\n",
     "response = requests.get(\"https://oauth.reddit.com/r/PrequelMemes/random\", headers=headers)\n",
-    "response.json()"
+    "#response.json()"
    ]
   },
   {
@@ -719,22 +468,29 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "I've been looking at the 'have i been pwned' API which is now at version 2.\n",
-    "First off there is a great script for version one written by Dr Mike Pound, lets give it a go.\n"
+    "I've been looking at the 'have i been pwned' API.\n",
+    "First off there is a great script written by Dr Mike Pound, lets give it a go.\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "········\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "('7CB9DED83CD7F2704D6435C743ED3124ED56C701', 766)"
+       "('5BAA61E4C9B93F3F0682250B6CF8331B7EE68FD8', 3645804)"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -792,48 +548,29 @@
     "            continue\n",
     "    return ec\n",
     "\n",
-    "lookup_pwned_api(\"battletech\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "('ACA7AF6B2BE0A44F03E37C4620761B5D0B3F270F', 5)"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "lookup_pwned_api(\"delta1472\")"
+    "import getpass\n",
+    "lookup_pwned_api(getpass.getpass())"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Lets try with V2"
+    "Lets have a play with V2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "3"
+       "4"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -841,7 +578,7 @@
    "source": [
     "import requests\n",
     "\n",
-    "pwd = \"lynettecolleen@yahoo.com.au\"\n",
+    "pwd = \"timbo72@gmail.com\"\n",
     "headers = {\"api-version\":\"2\", \"user-agent\":\"Timbos-api-notebook\"}    \n",
     "url = \"https://haveibeenpwned.com/api/breachedaccount/\" + pwd + \"?truncateResponse=true\"\n",
     "res = requests.get(url, headers = headers)\n",
@@ -851,16 +588,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['Houzz', 'MyFitnessPal', 'OnlinerSpambot']"
+       "['Adobe', 'Disqus', 'Dropbox', 'MyFitnessPal']"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -871,6 +608,44 @@
     "    sites.append(i[\"Name\"])\n",
     "    \n",
     "sites"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "········\n"
+     ]
+    }
+   ],
+   "source": [
+    "import getpass\n",
+    "psswd = getpass.getpass()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'test'"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "psswd"
    ]
   }
  ],
