--- a/PyTricks.ipynb
+++ b/PyTricks.ipynb
@@ -129,6 +129,51 @@
     "print(greeting(382))\n",
     "print(greeting(333))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "red\n",
+      "3812.4\n",
+      "Car(color='red', mileage=3812.4)\n"
+     ]
+    },
+    {
+     "ename": "AttributeError",
+     "evalue": "can't set attribute",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-2-d16c7e1a1b8a>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     14\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     15\u001b[0m \u001b[0;31m# Like tuples, namedtuples are immutable:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 16\u001b[0;31m \u001b[0mmy_car\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcolor\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m'blue'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m: can't set attribute"
+     ]
+    }
+   ],
+   "source": [
+    "# Why Python is Great: Namedtuples\n",
+    "# Using namedtuple is way shaorter than\n",
+    "# defining a class manually:\n",
+    "from collections import namedtuple\n",
+    "Car = namedtuple('Car', 'color mileage')\n",
+    "\n",
+    "# Our new \"Car\" class works as expected:\n",
+    "my_car = Car('red', 3812.4)\n",
+    "print(my_car.color)\n",
+    "print(my_car.mileage)\n",
+    "\n",
+    "# We get a nice string repr for free:\n",
+    "print(my_car)\n",
+    "\n",
+    "# Like tuples, namedtuples are immutable:\n",
+    "my_car.color = 'blue'"
+   ]
   }
  ],
  "metadata": {
@@ -147,7 +192,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
