--- a/DQ blog APIs.ipynb
+++ b/DQ blog APIs.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -39,7 +39,7 @@
        "200"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -52,16 +52,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "b'{\"iss_position\": {\"latitude\": \"23.8181\", \"longitude\": \"164.9326\"}, \"timestamp\": 1552591894, \"message\": \"success\"}'"
+       "b'{\"iss_position\": {\"latitude\": \"34.6997\", \"longitude\": \"-18.9199\"}, \"message\": \"success\", \"timestamp\": 1553737188}'"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -72,18 +72,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'iss_position': {'latitude': '23.8181', 'longitude': '164.9326'},\n",
-       " 'timestamp': 1552591894,\n",
-       " 'message': 'success'}"
+       "{'iss_position': {'latitude': '34.6997', 'longitude': '-18.9199'},\n",
+       " 'message': 'success',\n",
+       " 'timestamp': 1553737188}"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -110,7 +110,7 @@
        "200"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -127,16 +127,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "b'{\\n  \"message\": \"success\", \\n  \"request\": {\\n    \"altitude\": 100, \\n    \"datetime\": 1542879971, \\n    \"latitude\": 37.81, \\n    \"longitude\": 144.96, \\n    \"passes\": 5\\n  }, \\n  \"response\": [\\n    {\\n      \"duration\": 628, \\n      \"risetime\": 1542880554\\n    }, \\n    {\\n      \"duration\": 521, \\n      \"risetime\": 1542886439\\n    }, \\n    {\\n      \"duration\": 474, \\n      \"risetime\": 1542892330\\n    }, \\n    {\\n      \"duration\": 580, \\n      \"risetime\": 1542898133\\n    }, \\n    {\\n      \"duration\": 637, \\n      \"risetime\": 1542903911\\n    }\\n  ]\\n}\\n'"
+       "b'{\\n  \"message\": \"success\", \\n  \"request\": {\\n    \"altitude\": 100, \\n    \"datetime\": 1553737199, \\n    \"latitude\": 37.81, \\n    \"longitude\": 144.96, \\n    \"passes\": 5\\n  }, \\n  \"response\": [\\n    {\\n      \"duration\": 503, \\n      \"risetime\": 1553752166\\n    }, \\n    {\\n      \"duration\": 645, \\n      \"risetime\": 1553757862\\n    }, \\n    {\\n      \"duration\": 562, \\n      \"risetime\": 1553763727\\n    }, \\n    {\\n      \"duration\": 476, \\n      \"risetime\": 1553769638\\n    }, \\n    {\\n      \"duration\": 552, \\n      \"risetime\": 1553775470\\n    }\\n  ]\\n}\\n'"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -147,16 +147,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'Server': 'nginx/1.10.3', 'Date': 'Thu, 22 Nov 2018 09:47:06 GMT', 'Content-Type': 'application/json', 'Content-Length': '520', 'Connection': 'keep-alive', 'Via': '1.1 vegur'}"
+       "{'Server': 'nginx/1.10.3', 'Date': 'Thu, 28 Mar 2019 01:39:59 GMT', 'Content-Type': 'application/json', 'Content-Length': '520', 'Connection': 'keep-alive', 'Via': '1.1 vegur'}"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -175,18 +175,18 @@
       "text/plain": [
        "{'message': 'success',\n",
        " 'request': {'altitude': 100,\n",
-       "  'datetime': 1542879971,\n",
+       "  'datetime': 1553737199,\n",
        "  'latitude': 37.81,\n",
        "  'longitude': 144.96,\n",
        "  'passes': 5},\n",
-       " 'response': [{'duration': 628, 'risetime': 1542880554},\n",
-       "  {'duration': 521, 'risetime': 1542886439},\n",
-       "  {'duration': 474, 'risetime': 1542892330},\n",
-       "  {'duration': 580, 'risetime': 1542898133},\n",
-       "  {'duration': 637, 'risetime': 1542903911}]}"
+       " 'response': [{'duration': 503, 'risetime': 1553752166},\n",
+       "  {'duration': 645, 'risetime': 1553757862},\n",
+       "  {'duration': 562, 'risetime': 1553763727},\n",
+       "  {'duration': 476, 'risetime': 1553769638},\n",
+       "  {'duration': 552, 'risetime': 1553775470}]}"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -205,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -214,7 +214,7 @@
        "200"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -226,16 +226,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "3"
+       "6"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -268,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -277,7 +277,7 @@
        "200"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -290,48 +290,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'Content-Type': 'application/json; charset=UTF-8', 'x-ua-compatible': 'IE=edge', 'x-frame-options': 'SAMEORIGIN', 'x-content-type-options': 'nosniff', 'x-xss-protection': '1; mode=block', 'set-cookie': 'loid=00000000002nakoxi7.2.1542881930859.Z0FBQUFBQmI5b0tLcTNObXo0dm8yTU1CcENQcS1PQ1hlSG05aHMyQ0JpWnE5UFR2WldTd0FlMnpoQU9QQUVrazZYUFB5a3JaSmpXVXZjYjhyZkJ4Uk1UYVByTFNjNEZpWndSSHc3LUYtZjk3S2JCYVFTNlljdE1GbjdLbTAyM001MzV1bTlERl9uUS0; Domain=reddit.com; Max-Age=63071999; Path=/; expires=Sat, 21-Nov-2020 10:18:50 GMT; secure, session_tracker=2pF3vmk6cBLGBnWsdT.0.1542881930860.Z0FBQUFBQmI5b0tLUi1adm44eVl1bkNTNDV5VFVGdGFMdmJjNndrcTNRbzZadVAtZGlDVDNYUmczMGFlczlCTnNsVzVobXprVjRsdC1NZG5paW10OGdjSmlwVDJHMEFFb1dRaWRzdTNuYWp5RGhHWmxneVd2TkJHdUpfVHQyaFFWcExPbWVSem9jYmc; Domain=reddit.com; Max-Age=7199; Path=/; expires=Thu, 22-Nov-2018 12:18:50 GMT; secure, edgebucket=vPfffv6AhFjzlNpMUj; Domain=reddit.com; Max-Age=63071999; Path=/;  secure', 'access-control-allow-origin': '*', 'access-control-expose-headers': 'X-Moose', 'cache-control': 'max-age=0, must-revalidate', 'X-Moose': 'majestic', 'Strict-Transport-Security': 'max-age=15552000; includeSubDomains; preload', 'Content-Length': '228', 'Accept-Ranges': 'bytes', 'Date': 'Thu, 22 Nov 2018 10:18:50 GMT', 'Via': '1.1 varnish', 'Connection': 'keep-alive', 'X-Served-By': 'cache-hkg17922-HKG', 'X-Cache': 'MISS', 'X-Cache-Hits': '0', 'X-Timer': 'S1542881931.737364,VS0,VE249', 'Server': 'snooserv'}"
+       "21"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "response.headers"
+    "# From here out any long response strings will be placed in a variable but not printe\n",
+    "# Having huge blocks of json within the notebook as caused issues for me in the past\n",
+    "reddit_headers = response.headers\n",
+    "# reddit_headers"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 43,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'subreddit_names': ['birdswitharms',\n",
-       "  'CuddlyKitties',\n",
-       "  'TouchThaFishy',\n",
-       "  'redpandas',\n",
-       "  'CatsStandingUp'],\n",
-       " 'comment_count': 3,\n",
-       " 'comment_url': '/r/trendingsubreddits/comments/9zbcmo/trending_subreddits_for_20181122_rbirdswitharms/'}"
-      ]
-     },
-     "execution_count": 30,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "response.json()"
+    "reddit_response = response.json()\n",
+    "# reddit_response"
    ]
   },
   {
@@ -359,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -379,18 +366,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'getpass' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-25-ca274c01530c>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mheaders\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m{\u001b[0m\u001b[0;34m\"User-Agent\"\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0;34m\"ClientMcClientface by /u/timbo72\"\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mpassword\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mgetpass\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mgetpass\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0mpost_data\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m{\u001b[0m\u001b[0;34m\"grant_type\"\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0;34m\"password\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"username\"\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0;34m\"timbo72\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"password\"\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mpassword\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'getpass' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Password········\n"
      ]
     }
    ],
@@ -402,59 +385,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'access_token': '16182986-sVDvEG9AhqSyjNrdS2N_3B0bt-I',\n",
-       " 'token_type': 'bearer',\n",
-       " 'expires_in': 3600,\n",
-       " 'scope': '*'}"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "response = requests.post(\"https://www.reddit.com/api/v1/access_token\", auth=client_auth, data=post_data, headers=headers)\n",
-    "response.json()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'message': 'Internal Server Error', 'error': 500}"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "headers = {\"Authorization\": \"bearer 16182986-sVDvEG9AhqSyjNrdS2N_3B0bt-I\", \"User-Agent\": \"ClientMcClientface by /u/timbo72\"}\n",
-    "response = requests.get(\"https://oauth.reddit.com/api/v1/me\", headers=headers)\n",
-    "response.json()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
-    "headers = {\"Authorization\": \"bearer 16182986-sVDvEG9AhqSyjNrdS2N_3B0bt-I\", \"User-Agent\": \"ClientMcClientface by /u/timbo72\"}\n",
+    "response = requests.post(\"https://www.reddit.com/api/v1/access_token\", auth=client_auth, data=post_data, headers=headers)\n",
+    "token = response.json()['access_token']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "headers = {\"Authorization\": \"bearer \" + token, \"User-Agent\": \"ClientMcClientface by /u/timbo72\"}\n",
+    "response = requests.get(\"https://oauth.reddit.com/api/v1/me\", headers=headers)\n",
+    "my_data = response.json()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "headers = {\"Authorization\": \"bearer \" + token, \"User-Agent\": \"ClientMcClientface by /u/timbo72\"}\n",
     "response = requests.get(\"https://oauth.reddit.com/r/PrequelMemes/random\", headers=headers)\n",
-    "#response.json()"
+    "prequel_memes = response.json()"
    ]
   },
   {
@@ -474,23 +432,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "········\n"
+      "Password········\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "('5BAA61E4C9B93F3F0682250B6CF8331B7EE68FD8', 3645804)"
+       "('7CB9DED83CD7F2704D6435C743ED3124ED56C701', 766)"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -549,7 +507,7 @@
     "    return ec\n",
     "\n",
     "import getpass\n",
-    "lookup_pwned_api(getpass.getpass())"
+    "lookup_pwned_api(getpass.getpass(\"Password\"))"
    ]
   },
   {
@@ -561,16 +519,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "4"
+       "403"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -578,12 +536,13 @@
    "source": [
     "import requests\n",
     "\n",
+    "#pwd = input(\"Input and email to check:\")\n",
     "pwd = \"timbo72@gmail.com\"\n",
     "headers = {\"api-version\":\"2\", \"user-agent\":\"Timbos-api-notebook\"}    \n",
     "url = \"https://haveibeenpwned.com/api/breachedaccount/\" + pwd + \"?truncateResponse=true\"\n",
-    "res = requests.get(url, headers = headers)\n",
-    "data = res.json()\n",
-    "len(data)"
+    "response = requests.get(url, headers = headers)\n",
+    "#data = response.json()\n",
+    "response.status_code"
    ]
   },
   {
@@ -611,41 +570,85 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### What3Words"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Heard about an interesting idea for geolocation called what3words, they have an API..."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "········\n"
+      "API Key········\n"
      ]
     }
    ],
    "source": [
+    "import requests\n",
     "import getpass\n",
-    "psswd = getpass.getpass()"
+    "key = getpass.getpass(\"API Key\")\n",
+    "lat = \"51.521238\"\n",
+    "long = \"-0.203607\"\n",
+    "url = \"https://api.what3words.com/v3/convert-to-3wa?coordinates=\" + lat + \"%2c\" + long + \"&key=\" + key\n",
+    "response = requests.get(url)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "'test'"
-      ]
-     },
-     "execution_count": 29,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "index.home.raft\n"
+     ]
     }
    ],
    "source": [
-    "psswd"
+    "if response.status_code != 200:\n",
+    "    code = response.json()['error']['code']\n",
+    "    message = response.json()['error']['message']\n",
+    "    print(code)\n",
+    "    print(message)\n",
+    "else:\n",
+    "    words = response.json()['words']\n",
+    "    print(words)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "ToDo:  \n",
+    "\n",
+    "Getting sick of having to enter API keys and such manually...  \n",
+    "option a: txt file with whatever i need, read in at start of notebook.\n",
+    "    problen is i can't keep that file in github...  \n",
+    "option b: option a plus encryption...\n",
+    "\n",
+    "needs:  \n",
+    "reddit client secret  \n",
+    "reddit client auth  \n",
+    "reddit password  \n",
+    "W3W API key\n",
+    "\n",
+    "doesn't need encrytion:   \n",
+    "W3W lat/long"
    ]
   }
  ],
@@ -665,7 +668,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
