moved sensitive stuff to .json file

--- a/DQ blog APIs.ipynb
+++ b/DQ blog APIs.ipynb
@@ -11,14 +11,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Import ALL the things!\n",
     "import requests\n",
     "import requests.auth\n",
     "import json\n",
     "import getpass"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Got very sick of pasting in all the secret stuff that I can't leave in the notebook so...\n",
+    "\n",
+    "with open('workfile.json', 'r') as file:\n",
+    "        data = json.load(file)\n",
+    "        \n",
+    "#for key in data.keys():\n",
+    "#        print(key)"
    ]
   },
   {
@@ -101,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -110,7 +126,7 @@
        "200"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -118,7 +134,7 @@
    "source": [
     "# Params to pass to the API.\n",
     "# This is the Lat/Long of Melbourne, Australia\n",
-    "parameters = {\"lat\": 37.81, \"lon\": 144.96}\n",
+    "parameters = {\"lat\": -37.81, \"lon\": 144.96}\n",
     "\n",
     "# Make a get request with parameters\n",
     "response = requests.get(\"http://api.open-notify.org/iss-pass.json\", params=parameters)\n",
@@ -127,16 +143,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "b'{\\n  \"message\": \"success\", \\n  \"request\": {\\n    \"altitude\": 100, \\n    \"datetime\": 1553737199, \\n    \"latitude\": 37.81, \\n    \"longitude\": 144.96, \\n    \"passes\": 5\\n  }, \\n  \"response\": [\\n    {\\n      \"duration\": 503, \\n      \"risetime\": 1553752166\\n    }, \\n    {\\n      \"duration\": 645, \\n      \"risetime\": 1553757862\\n    }, \\n    {\\n      \"duration\": 562, \\n      \"risetime\": 1553763727\\n    }, \\n    {\\n      \"duration\": 476, \\n      \"risetime\": 1553769638\\n    }, \\n    {\\n      \"duration\": 552, \\n      \"risetime\": 1553775470\\n    }\\n  ]\\n}\\n'"
+       "b'{\\n  \"message\": \"success\", \\n  \"request\": {\\n    \"altitude\": 100, \\n    \"datetime\": 1553939954, \\n    \"latitude\": -37.81, \\n    \"longitude\": 144.96, \\n    \"passes\": 5\\n  }, \\n  \"response\": [\\n    {\\n      \"duration\": 594, \\n      \"risetime\": 1553966299\\n    }, \\n    {\\n      \"duration\": 643, \\n      \"risetime\": 1553972058\\n    }, \\n    {\\n      \"duration\": 540, \\n      \"risetime\": 1553977950\\n    }, \\n    {\\n      \"duration\": 499, \\n      \"risetime\": 1553983845\\n    }, \\n    {\\n      \"duration\": 601, \\n      \"risetime\": 1553989656\\n    }\\n  ]\\n}\\n'"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -147,16 +163,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'Server': 'nginx/1.10.3', 'Date': 'Thu, 28 Mar 2019 01:39:59 GMT', 'Content-Type': 'application/json', 'Content-Length': '520', 'Connection': 'keep-alive', 'Via': '1.1 vegur'}"
+       "{'Server': 'nginx/1.10.3', 'Date': 'Sat, 30 Mar 2019 09:59:14 GMT', 'Content-Type': 'application/json', 'Content-Length': '521', 'Connection': 'keep-alive', 'Via': '1.1 vegur'}"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -167,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -175,18 +191,18 @@
       "text/plain": [
        "{'message': 'success',\n",
        " 'request': {'altitude': 100,\n",
-       "  'datetime': 1553737199,\n",
-       "  'latitude': 37.81,\n",
+       "  'datetime': 1553939954,\n",
+       "  'latitude': -37.81,\n",
        "  'longitude': 144.96,\n",
        "  'passes': 5},\n",
-       " 'response': [{'duration': 503, 'risetime': 1553752166},\n",
-       "  {'duration': 645, 'risetime': 1553757862},\n",
-       "  {'duration': 562, 'risetime': 1553763727},\n",
-       "  {'duration': 476, 'risetime': 1553769638},\n",
-       "  {'duration': 552, 'risetime': 1553775470}]}"
+       " 'response': [{'duration': 594, 'risetime': 1553966299},\n",
+       "  {'duration': 643, 'risetime': 1553972058},\n",
+       "  {'duration': 540, 'risetime': 1553977950},\n",
+       "  {'duration': 499, 'risetime': 1553983845},\n",
+       "  {'duration': 601, 'risetime': 1553989656}]}"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -346,73 +362,83 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "input client secret from https://www.reddit.com/prefs/apps········\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Client API data. Apps client ID and apps client secret\n",
-    "# Because i can't be trusted the secret will need to be input each time.\n",
-    "client_secret = getpass.getpass(\"input client secret from https://www.reddit.com/prefs/apps\")\n",
-    "client_auth = requests.auth.HTTPBasicAuth('LJqjGWbNCzUpKg', client_secret)"
+    "client_auth = requests.auth.HTTPBasicAuth(data['reddit_api'], data['reddit_api_key'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "headers = {\"User-Agent\": data['reddit_uagent']}\n",
+    "post_data = {\"grant_type\": \"password\", \"username\": data['reddit_uname'], \"password\": data['reddit_pass']}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Password········\n"
+      "200\n"
      ]
     }
    ],
    "source": [
-    "headers = {\"User-Agent\": \"ClientMcClientface by /u/timbo72\"}\n",
-    "password = getpass.getpass(\"Password\")\n",
-    "post_data = {\"grant_type\": \"password\", \"username\": \"timbo72\", \"password\": password}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 61,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "response = requests.post(\"https://www.reddit.com/api/v1/access_token\", auth=client_auth, data=post_data, headers=headers)\n",
-    "token = response.json()['access_token']"
+    "token = response.json()['access_token']\n",
+    "print(response.status_code)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "200\n"
+     ]
+    }
+   ],
    "source": [
     "headers = {\"Authorization\": \"bearer \" + token, \"User-Agent\": \"ClientMcClientface by /u/timbo72\"}\n",
     "response = requests.get(\"https://oauth.reddit.com/api/v1/me\", headers=headers)\n",
-    "my_data = response.json()"
+    "print(response.status_code)\n",
+    "my_data = response.json()\n",
+    "#my_data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "200\n"
+     ]
+    }
+   ],
    "source": [
     "headers = {\"Authorization\": \"bearer \" + token, \"User-Agent\": \"ClientMcClientface by /u/timbo72\"}\n",
     "response = requests.get(\"https://oauth.reddit.com/r/PrequelMemes/random\", headers=headers)\n",
-    "prequel_memes = response.json()"
+    "print(response.status_code)\n",
+    "prequel_memes = response.json()\n",
+    "#prequel_memes"
    ]
   },
   {
@@ -432,7 +458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -445,10 +471,10 @@
     {
      "data": {
       "text/plain": [
-       "('7CB9DED83CD7F2704D6435C743ED3124ED56C701', 766)"
+       "('3AA7B96CE4ED48F38A718A03DD5C0ABEE3CE0667', 0)"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -519,54 +545,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "403"
-      ]
-     },
-     "execution_count": 68,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "input email/username to check:········\n",
+      "200\n",
+      "['500px', 'Adobe', 'Disqus', 'Dropbox', 'MyFitnessPal']\n"
+     ]
     }
    ],
    "source": [
-    "import requests\n",
+    "# Worth noting that this won't work if the run via a VPN (i.e. from my server)\n",
     "\n",
-    "#pwd = input(\"Input and email to check:\")\n",
-    "pwd = \"timbo72@gmail.com\"\n",
-    "headers = {\"api-version\":\"2\", \"user-agent\":\"Timbos-api-notebook\"}    \n",
+    "import requests\n",
+    "import json\n",
+    "\n",
+    "pwd = getpass.getpass(\"input email/username to check:\")\n",
+    "headers = {\"api-version\":\"2\", \"user-agent\":\"Timbos-api-project\"}    \n",
     "url = \"https://haveibeenpwned.com/api/breachedaccount/\" + pwd + \"?truncateResponse=true\"\n",
     "response = requests.get(url, headers = headers)\n",
-    "#data = response.json()\n",
-    "response.status_code"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['Adobe', 'Disqus', 'Dropbox', 'MyFitnessPal']"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "sites = []\n",
-    "for i in data:\n",
-    "    sites.append(i[\"Name\"])\n",
-    "    \n",
-    "sites"
+    "print(response.status_code)\n",
+    "if response.status_code == 200:\n",
+    "    data = response.json()\n",
+    "    sites = []\n",
+    "    for i in data:\n",
+    "        sites.append(i['Name'])\n",
+    "    print(sites)\n",
+    "else:\n",
+    "    print(\"Lucky you, nothing found!\")"
    ]
   },
   {
@@ -585,38 +595,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "API Key········\n"
+      "Lat:········\n",
+      "Long:········\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "200"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "import requests\n",
     "import getpass\n",
     "\n",
-    "key = getpass.getpass(\"API Key\")\n",
-    "lat = \"-38.619797\"\n",
-    "long = \"146.124734\"\n",
+    "key = data['W3W_api']\n",
+    "lat = getpass.getpass(\"Lat:\")\n",
+    "long = getpass.getpass(\"Long:\")\n",
+    "#lat = \"-37.810000\"\n",
+    "#long = \"144.960000\"\n",
     "url = \"https://api.what3words.com/v3/convert-to-3wa?coordinates=\" + lat + \"%2c\" + long + \"&key=\" + key\n",
-    "response = requests.get(url)"
+    "response = requests.get(url)\n",
+    "response.status_code"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "called.reef.odds\n"
+      "wants.bowls.beam\n"
      ]
     }
    ],
@@ -630,102 +654,6 @@
     "    words = response.json()['words']\n",
     "    print(words)"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "ToDo:  \n",
-    "\n",
-    "Getting sick of having to enter API keys and such manually...  \n",
-    "option a: txt file with whatever i need, read in at start of notebook.\n",
-    "    problen is i can't keep that file in github...  \n",
-    "option b: option a plus encryption...\n",
-    "\n",
-    "needs:  \n",
-    "reddit client secret  \n",
-    "reddit client auth  \n",
-    "reddit password  \n",
-    "W3W API key\n",
-    "\n",
-    "doesn't need encrytion:   \n",
-    "W3W lat/long"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# import all the thngs\n",
-    "from cryptography.fernet import Fernet\n",
-    "import getpass\n",
-    "import json"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Key:········\n",
-      "<class 'str'>\n",
-      "Value:········\n"
-     ]
-    }
-   ],
-   "source": [
-    "# get/encrypt/convert key/value\n",
-    "key = Fernet.generate_key()\n",
-    "FernetKey = (Fernet(key).encrypt((getpass.getpass(\"Key:\")).encode())).decode('utf-8')\n",
-    "FernetValue = (Fernet(key).encrypt((getpass.getpass(\"Value:\")).encode())).decode('utf-8')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Write encrypted data to file\n",
-    "datain = {FernetKey:FernetValue}\n",
-    "with open('workfile.json', 'w') as file:\n",
-    "    json.dump(datain, file)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 51,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'gAAAAABcnfyNDpsn2Q34hh6zXsdifpmglRq64jwQwC-Ugs7ijdc6-CqKGBygvWu-46IP-nzgyUDwkZ9aHGlZdRcUL_C740vBxw==': 'gAAAAABcnfyPCLJuk2jDHc1REa8LV8gDjCfMTWtr9qqmKmueqYxHLHNuOT9KUG1xZmrPqe-GnaGzg5iLt6nTKKB2tcxlSWe3-A=='}\n"
-     ]
-    }
-   ],
-   "source": [
-    "# read encrypted data from file\n",
-    "with open('workfile.json', 'r') as file:\n",
-    "    dataout = json.load(file)\n",
-    "    \n",
-    "for key in dataout:\n",
-    "    print(dataout)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
