added todays pytrik

--- a/PyTricks.ipynb
+++ b/PyTricks.ipynb
@@ -243,10 +243,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 0 1\n",
+      "1 0 1\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Why python is so grest:\n",
+    "# function argument unpacking\n",
+    "\n",
+    "def myfunc(x, y, z,):\n",
+    "    print(x, y, z,)\n",
+    "    \n",
+    "tuple_vec = (1, 0, 1)\n",
+    "dict_vec = {'x': 1, 'y': 0, 'z': 1}\n",
+    "\n",
+    "myfunc(*tuple_vec)\n",
+    "myfunc(**dict_vec)"
+   ]
   }
  ],
  "metadata": {
